[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/level/quiz_game2.gd" type="Script" id=1]
[ext_resource path="res://fonts/PixelOperator8-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://imagem/spaceSobre.jpg" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_color = Color( 0.478431, 0.105882, 0.529412, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[node name="quiz_game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 179.0
margin_top = -1.0
margin_right = 179.0
margin_bottom = -1.0
script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="."]
margin_left = -350.0
margin_top = -13.0
margin_right = 1570.0
margin_bottom = 1067.0
texture = ExtResource( 4 )

[node name="question_info" type="VBoxContainer" parent="."]
margin_left = 19.0
margin_top = 25.0
margin_right = 788.0
margin_bottom = 299.0

[node name="txt_question" type="Label" parent="question_info"]
margin_right = 769.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 70 )
size_flags_vertical = 6
custom_colors/font_color = Color( 0.670588, 0.513726, 0.709804, 1 )
custom_fonts/font = SubResource( 1 )
align = 1

[node name="Panel" type="Panel" parent="question_info"]
margin_top = 74.0
margin_right = 769.0
margin_bottom = 274.0
rect_min_size = Vector2( 0, 200 )

[node name="question_image" type="TextureRect" parent="question_info/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 6

[node name="question_video" type="VideoPlayer" parent="question_info/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -9.0
margin_bottom = -9.0

[node name="question_audio" type="AudioStreamPlayer" parent="question_info/Panel"]

[node name="question_holder" type="VBoxContainer" parent="."]
margin_left = 28.0
margin_top = 406.0
margin_right = 745.0
margin_bottom = 538.0
size_flags_vertical = 0

[node name="button_option_1" type="Button" parent="question_holder"]
margin_right = 717.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.670588, 0.513726, 0.709804, 1 )
custom_fonts/font = SubResource( 2 )

[node name="button_option_2" type="Button" parent="question_holder"]
margin_top = 45.0
margin_right = 717.0
margin_bottom = 86.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.670588, 0.513726, 0.709804, 1 )
custom_fonts/font = SubResource( 3 )

[node name="button_option_3" type="Button" parent="question_holder"]
margin_top = 90.0
margin_right = 717.0
margin_bottom = 132.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.670588, 0.513726, 0.709804, 1 )
custom_fonts/font = SubResource( 4 )
